--- a/src/main/webapp/WEB-INF/views/contents/list.jspx
+++ b/src/main/webapp/WEB-INF/views/contents/list.jspx
@@ -9,10 +9,10 @@
 	<jsp:output omit-xml-declaration="yes" />
 	<spring:message code="label_com_aeiou_bigbang_title" var="title"
 		htmlEscape="false" />
-	<spring:message code="label_com_aeiou_bigbang_publicspace"
-		var="publicspace" htmlEscape="false" />
-	<spring:message code="label_com_aeiou_bigbang_personalspace"
-		var="personalspace" htmlEscape="false" />
+	<spring:message code="label_com_aeiou_bigbang_domain_customizes_commonTag"
+		var="publicTag" htmlEscape="false" />
+	<spring:message code="label_com_aeiou_bigbang_domain_content_uncommonbigtag"
+		var="personalTag" htmlEscape="false" />
 	<spring:message code="label_com_aeiou_bigbang_privacyLevel"
 		var="privacyLevel" htmlEscape="false" />
 
@@ -30,10 +30,10 @@
 					property="publisher" z="JoA6rckfK+Yqfnqa1ScNuIgPZBg=" />
 			</c:if>
 			<table:column id="c_com_aeiou_bigbang_domain_Content_commonBigTag"
-				property="commonBigTag" label="${publicspace}"
+				property="commonBigTag" label="${publicTag}"
 				z="054H0l7u1U7D14UvHgTdwqh3sy4=" />
 			<table:column id="c_com_aeiou_bigbang_domain_Content_uncommonBigTag"
-				property="uncommonBigTag" label="${personalspace}"
+				property="uncommonBigTag" label="${personalTag}"
 				z="kDjPyZY8s59nSnA4ASrIOJGmeps=" />
 			<table:column id="c_com_aeiou_bigbang_domain_Content_authority"
 				property="authority" label="${privacyLevel}"
