--- a/src/main/webapp/WEB-INF/views/login.jspx
+++ b/src/main/webapp/WEB-INF/views/login.jspx
@@ -93,27 +93,13 @@
 				</util:panel></td>
 			<td class="tWireless nopaddingleft" valign="top"><util:panel
 					id="title2" title="${title2}">
-					<p>
-						<spring:message code="security_signup_reason_0" />
-					</p>
-					<p>
-						<spring:message code="security_signup_reason_1" />
-					</p>
-					<p>
-						<spring:message code="security_signup_reason_2" />
-					</p>
-					<p>
-						<spring:message code="security_signup_reason_3" />
-					</p>
-					<p>
-						<spring:message code="security_signup_reason_4" />
-					</p>
-					<p>
-						<spring:message code="security_signup_reason_5" />
-					</p>
-					<p>
-						<spring:message code="security_signup_reason_last" />
-					</p>
+					<p>${security_signup_reason_0}</p>
+					<p>${security_signup_reason_1}http://www.${app_name}.com/[your name]</p>
+					<p>${security_signup_reason_2}</p>
+					<p>${security_signup_reason_3}</p>
+					<p>${security_signup_reason_4}</p>
+					<p>${security_signup_reason_5}</p>
+					<p>${security_signup_reason_last}</p>
 					<br />
 					<spring:url value="/useraccounts" var="create_url">
 						<spring:param name="form" />
