--- a/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
@@ -32,25 +32,25 @@
 			<td class="tWireless nopaddingleft" valign="top"><util:panel
 					id="title2" title="${title2}">
 					<p>
-						<spring:message code="security_signup_reason_0" />
+						${security_signup_reason_0}
 					</p>
 					<p>
-						<spring:message code="security_signup_reason_1" />
+						${security_signup_reason_1}http://www.${app_name}.com/[your name]
 					</p>
 					<p>
-						<spring:message code="security_signup_reason_2" />
+						${security_signup_reason_2}
 					</p>
 					<p>
-						<spring:message code="security_signup_reason_3" />
+						${security_signup_reason_3}
 					</p>
 					<p>
-						<spring:message code="security_signup_reason_4" />
+						${security_signup_reason_4}
 					</p>
 					<p>
-						<spring:message code="security_signup_reason_5" />
+						${security_signup_reason_5}
 					</p>
 					<p>
-						<spring:message code="security_signup_reason_last" />
+						${security_signup_reason_last}
 					</p>
 					<br />
 				</util:panel></td>
