--- a/src/main/webapp/WEB-INF/views/public/list_publisher.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_publisher.jspx
@@ -8,7 +8,7 @@
 	<jsp:directive.page contentType="text/html;charset=UTF-8" />
 	<jsp:output omit-xml-declaration="yes" />
 	<spring:message code="allcontents" var="label" htmlEscape="false" />
-	<div style="background: #efefef; padding: 5px; margin-bottom: 3px">
+	<div style="background: #${background_title}; padding: 5px; margin-bottom: 3px">
 		<div style="text-align: center; padding-bottom: 5px">
 			<b>${publisher}</b>
 		</div>
