--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -45,189 +45,177 @@
 
 				<c:out value=" | " />
 				<spring:message code="security_login_form_name" />
-				<input id="j_username" type='text' name='j_username'
-					style="width: 60px; height: 16px;" />
+				<input id="j_username" type='text' name='j_username' style="width: 60px; height: 16px;" />
 				<script type="text/javascript">
-          <c:set var="sec_name_msg">
-            <spring:escapeBody javaScriptEscape="true">${name_msg}</spring:escapeBody>
-          </c:set>
-          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_username", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_name_msg}", required : true}})); 
-        </script>
+		          <c:set var="sec_name_msg">
+		            <spring:escapeBody javaScriptEscape="true">${name_msg}</spring:escapeBody>
+		          </c:set>
+		          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_username", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_name_msg}", required : true}})); 
+		        </script>
 
 				<c:out value=" " />
 				<spring:message code="security_login_form_password" />
-				<input id="j_password" type='password' name='j_password'
-					style="width: 60px; height: 16px" onsubmit="setValues()" />
+				<input id="j_password" type='password' name='j_password' style="width: 60px; height: 16px" onsubmit="setValues()" />
 				<script type="text/javascript">
-          <c:set var="sec_pwd_msg">
-            <spring:escapeBody javaScriptEscape="true">${pwd_msg}</spring:escapeBody>
-          </c:set>
-          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_password", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_pwd_msg}", required : true}})); 
-        </script>
+		          <c:set var="sec_pwd_msg">
+		            <spring:escapeBody javaScriptEscape="true">${pwd_msg}</spring:escapeBody>
+		          </c:set>
+		          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_password", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_pwd_msg}", required : true}})); 
+		        </script>
 
 				<c:out value=" | " />
-				<script type="text/javascript">Spring.addDecoration(new Spring.ValidateAllDecoration({elementId:'proceed', event:'onclick'}));</script>
-				<a onclick="setValues()" href="#"
-					style="height: 18px; vertical-align: top;"> <spring:message
-						code="button_submit" htmlEscape="false" />
+				<script type="text/javascript">
+				  Spring.addDecoration(new Spring.ValidateAllDecoration({elementId:'proceed', event:'onclick'}));
+				</script>
+				<a onclick="setValues()" href="#" style="height: 18px; vertical-align: top;"> 
+					<spring:message code="button_submit" htmlEscape="false" />
 				</a>
 				<script type="text/javascript">
-		  function setValues() {
-			var form = document.getElementById("headloginform");
-			form.submit();
-		  }
-	    </script>
+				  function setValues() {
+					var form = document.getElementById("headloginform");
+					form.submit();
+				  }
+			    </script>
 
 				<script type="text/javascript">
-			dojo.addOnLoad(function() {
-			  dojo.require("dojo.cookie");
-			  var rememberedName = dojo.cookie('login_name');
-			  var rememberedPassword = dojo.cookie('login_password');
-			  //alert("name is: " + rememberedName + "  password: " + rememberedPassword);
-			  if (rememberedName != null) {
-			    dojo.byId('j_rememberme').setAttribute('checked', 'true');
-			    dijit.byId('j_username').set("value", rememberedName);
-			    dijit.byId('j_password').set("value", rememberedPassword);
-			  }
-			  
-		      var Sys = {};
-		      var ua = navigator.userAgent.toLowerCase();
-		      if(ua.indexOf('firefox') > 0)
-		       	document.getElementById('proceed').type='submit';
-		        
-			})
-        </script>
+					dojo.addOnLoad(function() {
+					  dojo.require("dojo.cookie");
+					  var rememberedName = dojo.cookie('login_name');
+					  var rememberedPassword = dojo.cookie('login_password');
+					  //alert("name is: " + rememberedName + "  password: " + rememberedPassword);
+					  if (rememberedName != null) {
+					    dojo.byId('j_rememberme').setAttribute('checked', 'true');
+					    dijit.byId('j_username').set("value", rememberedName);
+					    dijit.byId('j_password').set("value", rememberedPassword);
+					  }
+					  
+				      var Sys = {};
+				      var ua = navigator.userAgent.toLowerCase();
+				      if(ua.indexOf('firefox') > 0)
+				       	document.getElementById('proceed').type='submit';
+				        
+					})
+		        </script>
 
 				<c:out value=" || " />
 				<spring:url value="/useraccounts?form" var="signupURL" />
-				<a href="${signupURL}"> <spring:message code="button_signup" />
+				<a href="${signupURL}">
+				 <spring:message code="button_signup" />
 				</a>
 
-				<input id="proceed" type="image"
-					value="${fn:escapeXml(submit_label)}"
+				<input id="proceed" type="image" value="${fn:escapeXml(submit_label)}"
 					style="vertical-align: bottom; width: 0px; height: 0px; border-bottom: 0px; border-top: 0px" />
 
 			</c:otherwise>
 		</c:choose>
 
-		<span class="new"> ${AddOnNotice} <spring:url
-				value="/resources/images/addon.png" var="addon_img_url" /> <img
-			src="${addon_img_url}" style="vertical-align: bottom;" /> <a
-			href='javascript:(
-	  function(e,t){
-	    var%20n=e.document;
-	    setTimeout(
-	      function(){
-	        function%20a(e){
-	          if(e.data==="destroy_bookmarklet"){
-	            var%20r=n.getElementById(t);
-	            if(r){
-	              n.body.removeChild(r);
-	              r=null
-	            }
-	          }
-	        }
-	        var%20t="DELI_bookmarklet_iframe",r=n.getElementById(t);
-	        if(r){
-	          return
-	        }
-	        var%20i="http://www."+n.title+".com/contents?form",s=n.createElement("iframe");
-	        s.id=t;
-	        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
-	        +"&amp;title="+encodeURIComponent(n.title)
-	        +"&amp;note="+encodeURIComponent(""+(e.getSelection?e.getSelection():n.getSelection?n.getSelection():n.selection.createRange().text))
-	        +"&amp;v=1.1";
-	        s.style.position="fixed";
-	        s.style.top="0";
-	        s.style.left="0";
-	        s.style.height="100%25";
-	        s.style.width="100%25";
-	        s.style.zIndex="16777270";
-	        s.style.border="none";
-	        s.style.visibility="hidden";
-	        s.onload=function(){
-	          this.style.visibility="visible"
-	        };
-	        n.body.appendChild(s);
-	        var%20o=e.addEventListener?"addEventListener":"attachEvent";
-	        var%20u=o=="attachEvent"?"onmessage":"message";
-	        e[o](u,a,false)
-	      },1)
-	    }
-	  )(window)'
-			title="${Tit_AddOnNotice}">
+		<span class="new"> ${AddOnNotice} 
+		   <spring:url value="/resources/images/addon.png" var="addon_img_url" />
+		   <img src="${addon_img_url}" style="vertical-align: bottom;" /> 
+		   <a href='javascript:(
+			  function(e,t){
+			    var%20n=e.document;
+			    setTimeout(
+			      function(){
+			        function%20a(e){
+			          if(e.data==="destroy_bookmarklet"){
+			            var%20r=n.getElementById(t);
+			            if(r){
+			              n.body.removeChild(r);
+			              r=null
+			            }
+			          }
+			        }
+			        var%20t="DELI_bookmarklet_iframe",r=n.getElementById(t);
+			        if(r){
+			          return
+			        }
+			        var%20i="http://www."+n.title+".com/contents?form",s=n.createElement("iframe");
+			        s.id=t;
+			        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
+			        +"&amp;title="+encodeURIComponent(n.title)
+			        +"&amp;note="+encodeURIComponent(""+(e.getSelection?e.getSelection():n.getSelection?n.getSelection():n.selection.createRange().text))
+			        +"&amp;v=1.1";
+			        s.style.position="fixed";
+			        s.style.top="0";
+			        s.style.left="0";
+			        s.style.height="100%25";
+			        s.style.width="100%25";
+			        s.style.zIndex="16777270";
+			        s.style.border="none";
+			        s.style.visibility="hidden";
+			        s.onload=function(){
+			          this.style.visibility="visible"
+			        };
+			        n.body.appendChild(s);
+			        var%20o=e.addEventListener?"addEventListener":"attachEvent";
+			        var%20u=o=="attachEvent"?"onmessage":"message";
+			        e[o](u,a,false)
+			      },1)
+			    }
+			  )(window)'
+				title="${Tit_AddOnNotice}">
 				${Btn_Booklet}
-		</a> <c:if test="${pageContext['request'].userPrincipal != null}">
+		   </a> 
+		   <c:if test="${pageContext['request'].userPrincipal != null}">
 				<c:out value=" || " />
 
 				<spring:url value="/messages" var="messages_url" />
-				<a href="${messages_url}"> <spring:url
-						value="/resources/images/inbox.png" var="inbox_img_url" /> <spring:message
-						code="global_menu_inboxManage" var="inboxManage_message"
-						htmlEscape="false" /> <img
-					alt="${fn:escapeXml(inboxManage_message)}" src="${inbox_img_url}"
-					title="${fn:escapeXml(inboxManage_message)}" /> <c:if
-						test="${newMessageAmount > 0}">
-        	[<span style="color: red;">${newMessageAmount}</span>]
-        </c:if>
+				<a href="${messages_url}">
+					<spring:url value="/resources/images/inbox.png" var="inbox_img_url" /> 
+					<spring:message code="global_menu_inboxManage" var="inboxManage_message" htmlEscape="false" />
+					<img alt="${fn:escapeXml(inboxManage_message)}" src="${inbox_img_url}" title="${fn:escapeXml(inboxManage_message)}" />
+					<c:if test="${newMessageAmount > 0}">
+	        			[<span style="color: red;">${newMessageAmount}</span>]
+	        		</c:if>
 				</a>
 
 				<c:out value=" || " />
 				<spring:url value="/contents" var="contents_url" />
-				<a href="${contents_url}"> <spring:url
-						value="/resources/images/content.png" var="content_img_url" /> <spring:message
-						code="global_menu_contentsManage" var="contentsManage_message"
-						htmlEscape="false" /> <img
-					alt="${fn:escapeXml(contentsManage_message)}"
-					src="${content_img_url}"
-					title="${fn:escapeXml(contentsManage_message)}" />
+				<a href="${contents_url}"> 
+					<spring:url value="/resources/images/content.png" var="content_img_url" /> 
+					<spring:message code="global_menu_contentsManage" var="contentsManage_message" htmlEscape="false" />
+					<img alt="${fn:escapeXml(contentsManage_message)}" src="${content_img_url}" title="${fn:escapeXml(contentsManage_message)}" />
 				</a>
 
 				<spring:message code="doublespace" />
 				<spring:url value="/twitters" var="twitter_url" />
-				<a href="${twitter_url}"> <spring:url
-						value="/resources/images/diary.png" var="diary_img_url" /> <spring:message
-						code="global_menu_diaryManage" var="diaryManage_message"
-						htmlEscape="false" /> <img
-					alt="${fn:escapeXml(diaryManage_message)}" src="${diary_img_url}"
-					title="${fn:escapeXml(diaryManage_message)}" />
+				<a href="${twitter_url}"> 
+					<spring:url value="/resources/images/diary.png" var="diary_img_url" /> 
+					<spring:message code="global_menu_diaryManage" var="diaryManage_message" htmlEscape="false" /> 
+					<img alt="${fn:escapeXml(diaryManage_message)}" src="${diary_img_url}" title="${fn:escapeXml(diaryManage_message)}" />
 				</a>
 
 				<spring:message code="doublespace" />
 				<spring:url value="/bigtags" var="bigtags_url" />
-				<a href="${bigtags_url}"> <spring:url
-						value="/resources/images/tag.png" var="tag_img_url" /> <spring:message
-						code="global_menu_tagsManage" var="tagsManage_message"
-						htmlEscape="false" /> <img
-					alt="${fn:escapeXml(tagsManage_message)}" src="${tag_img_url}"
-					title="${fn:escapeXml(tagsManage_message)}" />
+				<a href="${bigtags_url}"> 
+					<spring:url value="/resources/images/tag.png" var="tag_img_url" /> 
+					<spring:message code="global_menu_tagsManage" var="tagsManage_message" htmlEscape="false" /> 
+					<img alt="${fn:escapeXml(tagsManage_message)}" src="${tag_img_url}" title="${fn:escapeXml(tagsManage_message)}" />
 				</a>
 
 				<spring:message code="doublespace" />
-				<spring:url value="/useraccounts/${currentUserID}"
-					var="useraccounts_url">
+				<spring:url value="/useraccounts/${currentUserID}" var="useraccounts_url">
 					<spring:param name="form" />
 				</spring:url>
-				<a href="${useraccounts_url}"> <spring:url
-						value="/resources/images/account.png" var="account_img_url" /> <spring:message
-						code="global_menu_accountsManage" var="accountsManage_message"
-						htmlEscape="false" /> <img
-					alt="${fn:escapeXml(accountsManage_message)}"
-					src="${account_img_url}"
-					title="${fn:escapeXml(accountsManage_message)}" />
+				<a href="${useraccounts_url}"> 
+					<spring:url value="/resources/images/account.png" var="account_img_url" /> 
+					<spring:message code="global_menu_accountsManage" var="accountsManage_message" htmlEscape="false" /> 
+					<img alt="${fn:escapeXml(accountsManage_message)}" src="${account_img_url}" title="${fn:escapeXml(accountsManage_message)}" />
 				</a>
-
-				<spring:message code="doublespace" />
-				<spring:url value="/customizes" var="reset_url">
-					<spring:param name="relayouttype" value="reset" />
-				</spring:url>
-				<c:out value=" || " />
-				<a href="${reset_url}"> <spring:url
-						value="/resources/images/reset.png" var="reset_img_url" /> <spring:message
-						code="global_menu_setView" var="reset_message" htmlEscape="false" />
-					<img alt="${fn:escapeXml(reset_message)}" src="${reset_img_url}"
-					title="${fn:escapeXml(reset_message)}" />
-				</a>
+				
+				<c:if test="${fn:toLowerCase(pageContext['request'].userPrincipal.name) ne 'admin'}">
+					<spring:message code="doublespace" />
+					<spring:url value="/customizes" var="reset_url">
+						<spring:param name="relayouttype" value="reset" />
+					</spring:url>
+					<c:out value=" || " />
+					<a href="${reset_url}"> 
+						<spring:url value="/resources/images/reset.png" var="reset_img_url" /> 
+						<spring:message code="global_menu_setView" var="reset_message" htmlEscape="false" />
+						<img alt="${fn:escapeXml(reset_message)}" src="${reset_img_url}" title="${fn:escapeXml(reset_message)}" />
+					</a>
+				</c:if>
 			</c:if>
 		</span>
 	</form>
@@ -236,9 +224,9 @@
 	<div class="headImgArea">
 		<spring:url var="home" value="/" />
 		<spring:message code="button_home" var="home_label" htmlEscape="false" />
-		<a href="${home}" name="${fn:escapeXml(home_label)}"
-			title="${fn:escapeXml(home_label)}"> <spring:theme
-				code="styleSheet" var="roo_css" /> <c:choose>
+		<a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}"> 
+			<spring:theme code="styleSheet" var="roo_css" /> 
+			<c:choose>
 				<c:when test="${'resources/styles/9.css' eq roo_css}">
 					<img src="getImage/uc_${fn:toLowerCase(spaceOwner)}_headimage" />
 				</c:when>
