--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -21,23 +21,23 @@
 		<span> <!-- don't use "new" style here, because it make a right align, and will make the line height too low.-->
 			<spring:url value="/twitters" var="write_url">
 				<spring:param name="form" />
-			</spring:url> <a href="${write_url}"> <!-- <spring:message code="contributeTwitter" htmlEscape="false"/> -->
-				${btn_write_log} <spring:url value="/resources/images/addnote.png"
-					var="write_img_url" /> <spring:message arguments="${typeName}"
-					code="global_menu_newnote" var="add_message" htmlEscape="false" />
-				<img alt="${fn:escapeXml(add_message)}" src="${write_img_url}"
-				title="${fn:escapeXml(add_message)}" />
-		</a> <c:out value=" || " /> <spring:url value="/contents"
-				var="create_url">
+			</spring:url>
+			<a href="${write_url}"> <!-- <spring:message code="contributeTwitter" htmlEscape="false"/> -->
+				${btn_write_log} 
+				<spring:url value="/resources/images/addnote.png" var="write_img_url" /> 
+				<spring:message arguments="${typeName}"	code="global_menu_newnote" var="add_message" htmlEscape="false" />
+				<img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
+			</a>
+			<c:out value=" || " />
+			<spring:url value="/contents" var="create_url">
 				<spring:param name="form" />
-			</spring:url> <a href="${create_url}"> <!-- <spring:message code="contributeContent" htmlEscape="false"/> -->
-				${btn_save_favorite} <spring:url
-					value="/resources/images/addcontent.png" var="create_img_url" /> <spring:message
-					arguments="${typeName}" code="global_menu_newbookmark"
-					var="add_message" htmlEscape="false" /> <img
-				alt="${fn:escapeXml(add_message)}" src="${create_img_url}"
-				title="${fn:escapeXml(add_message)}" />
-		</a>
+			</spring:url> 
+			<a href="${create_url}"> <!-- <spring:message code="contributeContent" htmlEscape="false"/> -->
+				${btn_save_favorite} 
+				<spring:url value="/resources/images/addcontent.png" var="create_img_url" />
+				<spring:message arguments="${typeName}" code="global_menu_newbookmark" var="add_message" htmlEscape="false" /> 
+				<img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
+			</a>
 		</span>
 
 		<util:connectionUtils sharerName="${spaceOwner}"
