--- a/src/main/webapp/WEB-INF/views/customizes/list.jspx
+++ b/src/main/webapp/WEB-INF/views/customizes/list.jspx
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <div xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:page="urn:jsptagdir:/WEB-INF/tags/form"
+	xmlns:sec="http://www.springframework.org/security/tags" id="pl_com_aeiou_bigbang_domain_Customize"
 	xmlns:table="urn:jsptagdir:/WEB-INF/tags/form/fields" version="2.0">
 	<jsp:directive.page contentType="text/html;charset=UTF-8" />
 	<jsp:output omit-xml-declaration="yes" />
 	<page:list id="pl_com_aeiou_bigbang_domain_Customize"
 		items="${customizes}" z="aEwDncT+PuHxncaDMNuBQP1n1Cc=">
-		<table:table data="${customizes}"
-			id="l_com_aeiou_bigbang_domain_Customize" path="/customizes"
-			z="pQltmqdQuaiec67XNnaxtkxnME4=">
-			<table:column id="c_com_aeiou_bigbang_domain_Customize_cusKey"
-				property="cusKey" z="HWTWIT/JLC7NpI5Y+w41TzrZ1Io=" />
-			<table:column id="c_com_aeiou_bigbang_domain_Customize_cusValue"
-				property="cusValue" z="d6qQofxPs4+lKeQES5npWUhDDH8=" />
-			<table:column id="c_com_aeiou_bigbang_domain_Customize_useraccount"
-				property="useraccount" z="dEZTovr4vHhHifJqi6kbpGX2GvU=" />
-		</table:table>
+		<sec:authorize ifAllGranted="ROLE_ADMIN">
+			<table:table data="${customizes}"
+				id="l_com_aeiou_bigbang_domain_Customize" path="/customizes"
+				z="pQltmqdQuaiec67XNnaxtkxnME4=">
+				<table:column id="c_com_aeiou_bigbang_domain_Customize_cusKey"
+					property="cusKey" z="HWTWIT/JLC7NpI5Y+w41TzrZ1Io=" />
+				<table:column id="c_com_aeiou_bigbang_domain_Customize_cusValue"
+					property="cusValue" z="d6qQofxPs4+lKeQES5npWUhDDH8=" />
+				<table:column id="c_com_aeiou_bigbang_domain_Customize_useraccount"
+					property="useraccount" z="dEZTovr4vHhHifJqi6kbpGX2GvU=" />
+			</table:table>
+		</sec:authorize>
 	</page:list>
 </div>
