--- a/src/main/webapp/WEB-INF/views/customizes/create.jspx
+++ b/src/main/webapp/WEB-INF/views/customizes/create.jspx
@@ -3,7 +3,9 @@
 	xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields"
 	xmlns:form="urn:jsptagdir:/WEB-INF/tags/form"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:spring="http://www.springframework.org/tags" version="2.0">
+	xmlns:spring="http://www.springframework.org/tags"
+	xmlns:sec="http://www.springframework.org/security/tags"
+	version="2.0">
 	<jsp:directive.page contentType="text/html;charset=UTF-8" />
 	<jsp:output omit-xml-declaration="yes" />
 	<form:create id="fc_com_aeiou_bigbang_domain_Customize"
@@ -15,10 +17,12 @@
 		<field:input field="cusValue"
 			id="c_com_aeiou_bigbang_domain_Customize_cusValue" required="true"
 			z="MOcvgduXIUlASmNlHuNwrbU06ZM=" />
-		<field:select field="useraccount"
-			id="c_com_aeiou_bigbang_domain_Customize_useraccount" itemValue="id"
-			items="${useraccounts}" path="/useraccounts"
-			z="KLa4Y5q58LX598K80S99zUUUSZ0=" />
+		<sec:authorize ifAllGranted="ROLE_ADMIN">
+			<field:select field="useraccount"
+				id="c_com_aeiou_bigbang_domain_Customize_useraccount" itemValue="id"
+				items="${useraccounts}" path="/useraccounts"
+				z="KLa4Y5q58LX598K80S99zUUUSZ0=" />
+		</sec:authorize>
 	</form:create>
 	<form:dependency dependencies="${dependencies}"
 		id="d_com_aeiou_bigbang_domain_Customize"
