--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -112,49 +112,7 @@
 		<span class="new"> ${AddOnNotice} 
 		   <spring:url value="/resources/images/addon.png" var="addon_img_url" />
 		   <img src="${addon_img_url}" style="vertical-align: bottom;" /> 
-		   <a onclick="alert('Please drap me and drop onto favorate bar.'); return false" href='javascript:(
-			  function(e,t){
-			    var%20n=e.document;
-			    setTimeout(
-			      function(){
-			        function%20a(e){
-			          if(e.data==="destroy_bookmarklet"){
-			            var%20r=n.getElementById(t);
-			            if(r){
-			              n.body.removeChild(r);
-			              r=null
-			            }
-			          }
-			        }
-			        var%20t="DELI_bookmarklet_iframe",r=n.getElementById(t);
-			        if(r){
-			          return
-			        }
-			        var%20i="http://www.sharethegoodones.com/contents?form",s=n.createElement("iframe");
-			        s.id=t;
-			        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
-			        +"&amp;title="+encodeURIComponent(n.title)
-			        +"&amp;note="+encodeURIComponent(""+(e.getSelection?e.getSelection():n.getSelection?n.getSelection():n.selection.createRange().text))
-			        +"&amp;v=1.1";
-			        s.style.position="fixed";
-			        s.style.top="0";
-			        s.style.left="0";
-			        s.style.height="100%25";
-			        s.style.width="100%25";
-			        s.style.zIndex="16777270";
-			        s.style.border="none";
-			        s.style.visibility="hidden";
-			        s.onload=function(){
-			          this.style.visibility="visible"
-			        };
-			        n.body.appendChild(s);
-			        var%20o=e.addEventListener?"addEventListener":"attachEvent";
-			        var%20u=o=="attachEvent"?"onmessage":"message";
-			        e[o](u,a,false)
-			      },1)
-			    }
-			  )(window)'
-				title="${Tit_AddOnNotice}">
+		   <a onclick="alert('Please drap me and drop onto favorate bar.'); return false" href="${Script_BookLet}" title="${Tit_AddOnNotice}">
 				${Btn_Booklet}
 		   </a> 
 		   <c:if test="${pageContext['request'].userPrincipal != null}">
