--- a/src/main/webapp/WEB-INF/views/contents/update.jspx
+++ b/src/main/webapp/WEB-INF/views/contents/update.jspx
@@ -30,7 +30,7 @@
 			id="c_com_aeiou_bigbang_domain_Content_authority" itemValue="id"
 			items="${authorities}" path="/bigtags" z="user-managed" />
 		<!-- <field:input field="conentCache" id="c_com_aeiou_bigbang_domain_Content_conentCache" z="ciDeWotB2rtkeuHe5Esur9HePRc="/>-->
-		<sec:authorize ifAllGranted="ROLE_ADMIN">
+		<sec:authorize access="hasRole('ROLE_ADMIN')">
 			<field:select field="publisher"
 				id="c_com_aeiou_bigbang_domain_Content_publisher" itemValue="id"
 				items="${useraccounts}" path="/useraccounts" required="true"
